<resources>
    <string name="app_name">MyAndroidProject</string>
    <string name="avengers">Avengers:</string>
    <string name="end_the_game">End Game</string>
    <string name="rate">13+</string>
    <string name="description">Action, Adventure, Fantasy</string>
    <string name="review">125 Reviews</string>
    <string name="story">Storyline</string>
    <string name="info">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert">Robert Downey Jr.</string>
    <string name="crisEvans">Chris  Evans</string>
    <string name="mark">Mark Ruffalo</string>
    <string name="chrisHems">Chris Hemsworth</string>
    <string name="back">Back</string>

</resources>