<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgrount"
    tools:context=".MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/walpaper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_path"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orig" />

                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/path"
                    app:layout_constraintStart_toEndOf="@+id/path"
                    app:layout_constraintTop_toTopOf="@+id/path" />

                <ImageView
                    android:id="@+id/path"
                    android:layout_width="17dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/walpaper"
                    app:layout_constraintTop_toTopOf="@+id/walpaper"
                    app:srcCompat="@drawable/ic_path" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="343dp"
                android:layout_height="80dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/walpaper">

                <TextView
                    android:id="@+id/avengers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avengers"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/end_the_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_the_game"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/rate"
                android:layout_width="34dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/walpaper"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/description"
                android:layout_width="343dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/descript"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textColor="#FF3466" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="179dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description">

                <ImageView
                    android:id="@+id/star_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/star_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/star_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/star_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_star_empty" />

                <LinearLayout
                    android:layout_width="112dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/review"
                        android:textColor="#6D6D80"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/story"
                    android:textColor="#ECECEC" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/info"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
                app:layout_constraintStart_toStartOf="@+id/linearLayout4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    android:id="@+id/actors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cast"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/movie_one" />

                        <TextView
                            android:id="@+id/robert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/robert"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/movie_four" />

                        <TextView
                            android:id="@+id/chris"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/crisEvans"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/movie_two" />

                        <TextView
                            android:id="@+id/mark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/mark"
                            android:textAlignment="viewStart"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/movie_three" />

                        <TextView
                            android:id="@+id/chrisHamelson"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:text="@string/chrisHems"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>